Fix problem about Locale